--- a/Osa_7/bloglist/bloglist-frontend/package.json
+++ b/Osa_7/bloglist/bloglist-frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.9",
+    "react-router-dom": "^6.23.1",
     "redux": "^5.0.1"
   },
   "devDependencies": {
