--- a/Osa_9/Osat9.1-9.7/package.json
+++ b/Osa_9/Osat9.1-9.7/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
